[package]
name = "wavelet5"
version = "0.1.0"
authors = ["grigol00"]
edition = "2018"

[dependencies]

itertools = "0.8.0"
derive-new = "0.5.6"
derive_builder = "0.7.1"
bio = "*"
bv = { version = "0.10", features = ["serde"] }
snafu = "0.4.1"
petgraph = "0.4.13"
matches = "0.1.8"
serde = "1.0.92"
serde_json = "1.0.39"
